# CoNGA_23

./: .gitignore  README.md  requirements.txt
simulation/: CMakeLists.txt
simulation/blur/: CMakeLists.txt  README.md  blur.cpp  error.ipynb
simulation/blur/imgs/: images.ipynb
simulation/blur/src/: blur.cpp  loadpng.hpp
simulation/kmeans/: CMakeLists.txt  README.txt  error.ipynb  error.py  kmeans  kmeans.cpp  kmeans.hpp  kmeans.ipynb
simulation/kmeans/cat_float/: 16-clusters.txt  16-points.txt
simulation/kmeans/cat_posit/: 16-clusters.txt
simulation/kmeans/cat_posit_approx/: 16-clusters.txt  16-points.txt
simulation/knn/: CMakeLists.txt  README.txt  gen_datasets.py  knn  knn.cpp  knn.hpp
simulation/knn/dataset/: cancer.data  cancer_test.data  glass.data  iris.data  iris_test.data  parkinsons.data  wine.data  wine_test.data
simulation/knn/src/: knn.cpp  knn.hpp
simulation/sobel/: CMakeLists.txt  README.md  error.ipynb  sobel.hpp  sobel_testbench.cpp
simulation/sobel/src/: loadpng.cpp  sobel.hpp  sobel_testbench.cpp
simulation/src/: error.ipynb  log_div.cpp  log_div.hpp  log_mult.cpp  log_mult.hpp  log_sqrt.cpp  log_sqrt.hpp
vhdl/: README.md  elaborate_json.py  group_json.py  myAreaScript.sh  myDCscript.sh  myPowerScript.sh  myResultScript.sh  myTimeScript.sh  plot_graphs.ipynb  synopsys_results.json
vhdl/approx/div/12_bits/: flopoco.vhdl
vhdl/approx/div/16_bits/: flopoco.vhdl
vhdl/approx/div/32_bits/: flopoco.vhdl
vhdl/approx/div/64_bits/: flopoco.vhdl
vhdl/approx/div/results/: area.csv  delay.csv  power.csv  synopsys_results.json
vhdl/approx/log_div/12_bits/: test.vhdl
vhdl/approx/log_div/8_bits/: flopoco.vhdl  test.vhdl
vhdl/approx/log_mul/12_bits/: test.vhdl
vhdl/approx/log_mul/32_bits/: flopoco.vhdl
vhdl/approx/log_mul/64_bits/: flopoco.vhdl
vhdl/approx/log_sqrt/16_bits/: flopoco.vhdl
vhdl/approx/log_sqrt/64_bits/: flopoco.vhdl
vhdl/approx/log_sqrt/8_bits/: flopoco.vhdl
vhdl/approx/mul/: s1
vhdl/approx/mul/12_bits/: flopoco.vhdl
vhdl/approx/mul/16_bits/: flopoco.vhdl
vhdl/approx/sqrt/: s1
vhdl/exact/sqrt/: s1
vhdl/log_div/12_bits/: test.vhdl
vhdl/log_div/8_bits/: flopoco.vhdl  test.vhdl
vhdl/log_mult/12_bits/: test.vhdl
vhdl/log_mult/16_bits/: flopoco.vhdl
vhdl/log_mult/32_bits/: flopoco.vhdl
vhdl/log_mult/64_bits/: flopoco.vhdl
vhdl/log_mult/8_bits/: flopoco.vhdl  test.vhdl
vhdl/log_sqrt/16_bits/: flopoco.vhdl  test.vhdl
vhdl/log_sqrt/8_bits/: flopoco.vhdl  test.vhdl
(+849 files in other folders)
